Add significance section with images

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                 <li><a href="#folk-activities" class="nav-btn nav-activities">Hoạt động Dân Gian</a></li>
                 <li><a href="#other-activities" class="nav-btn nav-other">Các Hoạt Động Dân Gian Khác</a></li>
                 <li><a href="#folk-games" class="nav-btn nav-games">Trò Chơi Dân Gian</a></li>
+                <li><a href="#significance" class="nav-btn nav-significance">Ý Nghĩa & Sức Ảnh Hưởng</a></li>
                 <li><a href="#work-assignment" class="nav-btn nav-work">Bảng Phân Chia Công Việc</a></li>
             </ul>
         </div>
@@ -166,6 +167,33 @@
                     nhưng cũng vừa tạo ra không khí vui nhộn, tươi vui, đậm chất "Ngày hội", đó chính là các trò chơi
                     dân gian. Tại Phan Châu Trinh, các trò chơi như gánh nước về làng, nhảy dây, ô ăn quan, banh đũa,
                     hay bắt gà vịt... thu hút đông đảo học sinh tham gia và cổ vũ nhiệt tình.</p>
+            </div>
+        </div>
+    </section>
+
+    <!-- Phần: Ý nghĩa & Sức ảnh hưởng -->
+    <section id="significance" class="section significance-section">
+        <div class="container">
+            <h2>Ý Nghĩa & Sức Ảnh Hưởng</h2>
+            <div class="significance-layout">
+                <div class="significance-text">
+                    <div class="detail-box">
+                        <p>Ngày hội Văn hóa Dân gian diễn ra vào dịp giáp Tết không chỉ để vui chơi mà còn là cách nhà
+                            trường giúp học sinh có cơ hội để tiếp xúc với văn hóa truyền thống. Thay vì chỉ học trong
+                            sách vở, mọi người được trực tiếp trải nghiệm qua những hoạt động rất đời thường như gói
+                            bánh chưng, bày mâm ngũ quả, vẽ tranh dân gian, làm nón lá hay tham gia các trò chơi như
+                            nhảy dây, ô ăn quan, gánh nước,… Nhờ đó, văn hóa dân tộc trở nên gần gũi, sống động và dễ
+                            nhớ hơn.</p>
+                    </div>
+                </div>
+                <div class="significance-images">
+                    <div class="gallery-item">
+                        <img src="ynghia-1.jpg" alt="Không khí sôi động ngày hội">
+                    </div>
+                    <div class="gallery-item">
+                        <img src="ynghia-2.jpg" alt="Học sinh tham gia ngày hội">
+                    </div>
+                </div>
             </div>
         </div>
     </section>
