Fix case sensitivity: rename .JPG to .jpg for GitHub Pages

--- a/lop-10.html
+++ b/lop-10.html
@@ -46,10 +46,10 @@
                     <img src="lop10-img3.jpg.jpg" alt="Biểu diễn truyền thống">
                 </div>
                 <div class="gallery-item">
-                    <img src="lop10-img4.jpg.JPG" alt="Văn nghệ sân khấu">
+                    <img src="lop10-img4.jpg.jpg" alt="Văn nghệ sân khấu">
                 </div>
                 <div class="gallery-item gallery-large">
-                    <img src="lop10-img5.jpg.JPG" alt="Sân khấu lớn">
+                    <img src="lop10-img5.jpg.jpg" alt="Sân khấu lớn">
                 </div>
             </div>
 
