--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Văn Hóa Dân Gian Việt Nam</title>
+    <title>VĂN HOÁ DÂN GIAN </title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -15,7 +15,7 @@
             <img src="header-banner.jpg.png" alt="Văn Hóa Dân Gian 2026">
         </div>
         <div class="header-text">
-            <h1>Văn Hóa Dân Gian THPT Phan Châu Trinh</h1>
+            <h1>VĂN HOÁ DÂN GIAN THPT PHAN CHÂU TRINH</h1>
             <p>Khám phá vẻ đẹp truyền thống của dân tộc</p>
         </div>
     </header>
@@ -24,12 +24,12 @@
     <nav class="main-nav">
         <div class="container">
             <ul>
-                <li><a href="#schedule" class="nav-btn nav-schedule">Thời Gian & Địa Điểm</a></li>
-                <li><a href="#folk-activities" class="nav-btn nav-activities">Hoạt động Dân Gian</a></li>
-                <li><a href="#other-activities" class="nav-btn nav-other">Các Hoạt Động Dân Gian Khác</a></li>
-                <li><a href="#folk-games" class="nav-btn nav-games">Trò Chơi Dân Gian</a></li>
-                <li><a href="#significance" class="nav-btn nav-significance">Ý Nghĩa & Sức Ảnh Hưởng</a></li>
-                <li><a href="#work-assignment" class="nav-btn nav-work">Bảng Phân Chia Công Việc</a></li>
+                <li><a href="#schedule" class="nav-btn nav-schedule">Thời gian & Địa điểm</a></li>
+                <li><a href="#folk-activities" class="nav-btn nav-activities">Hoạt động dân gian</a></li>
+                <li><a href="#other-activities" class="nav-btn nav-other">Các hoạt động dân gian khác</a></li>
+                <li><a href="#folk-games" class="nav-btn nav-games">Trò chơi dân gian</a></li>
+                <li><a href="#significance" class="nav-btn nav-significance">Ý nghĩa & Sức ảnh hưởng</a></li>
+                <li><a href="#work-assignment" class="nav-btn nav-work">Bảng phân chia công việc</a></li>
             </ul>
         </div>
     </nav>
@@ -37,10 +37,10 @@
     <!-- Phần 2: Thời gian, địa điểm -->
     <section id="schedule" class="section schedule">
         <div class="container">
-            <h2>Thời Gian & Địa Điểm</h2>
+            <h2>Thời gian & Địa điểm</h2>
             <div class="info-box">
                 <div class="info-item">
-                    <h3>📅 Thời Gian</h3>
+                    <h3>📅 Thời gian</h3>
                     <p>Thời gian: 2026: sáng 30/1 đến chiều 31/1</p>
                     <p>Thường được tổ chức định kỳ vào dịp giáp Tết Nguyên Đán (khoảng tháng 1 dương lịch). Đây là thời
                         điểm để học sinh thư giãn sau kỳ thi học kỳ I và chào đón năm mới.</p>
@@ -58,7 +58,7 @@
     <!-- Phần 3: Hoạt động dân gian -->
     <section id="folk-activities" class="section folk-activities">
         <div class="container">
-            <h2>Hoạt động Dân Gian</h2>
+            <h2>Hoạt động dân gian</h2>
             <div class="grid">
                 <a href="lop-10.html" class="card card-link">
 
@@ -80,14 +80,14 @@
     <!-- Phần: Các hoạt động dân gian khác -->
     <section id="other-activities" class="section significance">
         <div class="container">
-            <h2>Các Hoạt Động Dân Gian Khác</h2>
+            <h2>Các hoạt động dân gian khác</h2>
             <div class="detail-box" style="margin-bottom: 30px;">
                 <h2 class="title-large">KHOẢNG TRỜI DI SẢN: NƠI NHỊP SỐNG TRẺ GIAO THOA CÙNG CỘI NGUỒN</h2>
             </div>
             <div class="activity-grid">
                 <div class="activity-card has-overlay">
                     <img src="hoatdong-1.jpg" alt="Làm bánh đậu xanh">
-                    <h3>Làm Bánh Đậu Xanh</h3>
+                    <h3>Làm bánh đậu xanh</h3>
                     <div class="card-overlay">
                         <p>Trong không khí rộn ràng của những ngày đầu năm, các bạn học sinh khối 10 đã cùng nhau trải
                             nghiệm cách làm bánh đậu xanh truyền thống. Không đặt nặng chuyện thắng thua, hoạt động này
@@ -98,7 +98,7 @@
                 </div>
                 <div class="activity-card has-overlay">
                     <img src="hoatdong-2.jpg" alt="Trang trí nón lá">
-                    <h3>Trang Trí Nón Lá</h3>
+                    <h3>Trang trí nón lá</h3>
                     <div class="card-overlay">
                         <p>Những chiếc nón lá đơn sơ đã trở nên sinh động hơn bao giờ hết dưới bàn tay hội họa của các
                             bạn học sinh khối 11 trong Ngày hội Văn hóa Dân gian 2026. Mỗi tác phẩm là một sự kết hợp
@@ -120,7 +120,7 @@
                 </div>
                 <div class="activity-card has-overlay">
                     <img src="hoatdong-4.jpg" alt="Gói bánh chưng">
-                    <h3>Gói Bánh Chưng</h3>
+                    <h3>Gói bánh chưng</h3>
                     <div class="card-overlay">
                         <p>Phần thi gói bánh chưng đã tạo nên một không khí ấm cúng và sôi nổi trong Ngày hội Văn hóa
                             Dân gian. Giữa mùi thơm của lá dong và gạo nếp, các bạn học sinh cùng nhau tỉ mỉ thực hiện
@@ -131,7 +131,7 @@
                 </div>
                 <div class="activity-card has-overlay">
                     <img src="hoatdong-5.jpg" alt="Trang trí bình hoa">
-                    <h3>Trang Trí Bình Hoa</h3>
+                    <h3>Trang trí bình hoa</h3>
                     <div class="card-overlay">
                         <p>Không khí Ngày hội Văn hóa Dân gian càng trở nên rực rỡ hơn bao giờ hết với phần thi trang
                             trí bình hoa của các bạn học sinh khối 10. Giữa tiếng hò reo cổ vũ từ bạn bè, các lớp cùng
@@ -147,7 +147,7 @@
     <!-- Phần: Trò chơi dân gian -->
     <section id="folk-games" class="section folk-games">
         <div class="container">
-            <h2>Trò Chơi Dân Gian</h2>
+            <h2>Trò chơi dân gian</h2>
             <div class="activity-grid game-grid">
                 <div class="activity-card">
                     <img src="trochoi-1.jpg" alt="Trò chơi dân gian">
@@ -174,7 +174,7 @@
     <!-- Phần: Ý nghĩa & Sức ảnh hưởng -->
     <section id="significance" class="section significance-section">
         <div class="container">
-            <h2>Ý Nghĩa & Sức Ảnh Hưởng</h2>
+            <h2>Ý nghĩa & Sức ảnh hưởng</h2>
             <div class="significance-layout">
                 <div class="significance-text">
                     <div class="detail-box">
