--- a/lop-12.html
+++ b/lop-12.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lớp 12 - Văn Hóa Dân Gian</title>
+    <title>Lớp 12 - Văn hoá dân gian</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
